aws/learn_modules/modules/ec2/pub_ip.tf
//Assign public ip to EC2 instance
resource "aws_eip" "pub_address" {
  instance = "${aws_instance.ubuntu.id}"
}
